# mdbook-metadata

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish_crate.yml  pull_request.yml
src/: cli.rs  main.rs  metadata.rs
tests/test_mdbook_metadata/: book.toml  reference-table.yaml
tests/test_mdbook_metadata/src/: SUMMARY.md
tests/test_mdbook_metadata/src/content/subject-1/: aliter-facta-cornibus-tandem.md  audita-quot.md
tests/test_mdbook_metadata/src/content/subject-2/subfolder-1/: bos-quae-inde-limen.md
tests/test_mdbook_metadata/src/content/subject-3/subfolder-1/subsubfolder-1/: esse-corpora-achaidas-sacros-ad-quas.md
